Bug 1090945 - [Messages] icon for an "email" recipient is too big on Flame r=asazypkin

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -685,7 +685,7 @@ Do not remove.
 
 .recipient[contenteditable].email {
   -moz-padding-end: 3.8rem;
-  background: white url(images/icons/icon_sms_compose_email.png) calc(100% - 1.5rem) center no-repeat;
+  background: white url(images/icons/icon_sms_compose_email.png) right 1.5rem center / 1.7rem no-repeat;
 }
 
 #messages-recipients-list > .recipient[contenteditable=true] {
